# airflow

./: .gitignore  README.md  airflow.md  docker-compose.yaml
airflow-demo/: pyproject.toml
dags/: test.py
