[tool.poetry]
name = "airflow-demo"
version = "0.1.0"
description = ""
authors = ["jinheonyoon <yjinheon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
apache-airflow = "^2.7.3"
google-api-python-client = "^2.108.0"
python-dotenv = "^1.0.0"
isodate = "^0.6.1"
google-cloud-bigquery = "^3.13.0"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
